<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".frmPerfil">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eresMedico"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="50sp"

        />
    <Button
        android:id="@+id/btnSi"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btnEresMedicoSi"
        android:textSize="35sp"
        android:layout_marginTop="30dp"
        />
    <Button
        android:id="@+id/btnNo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btnEresMedicoNo"
        android:textSize="35sp"
        android:layout_marginTop="30dp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/medico"
        />


</LinearLayout>