<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulBackground"
    android:orientation="vertical"
    tools:context=".frmRestablecerContrasenaActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/fondo_barra" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksandbold"
        android:gravity="center"
        android:text="@string/restacontra"
        android:textColor="@color/azulTexto"
        android:textSize="@dimen/texttitulo45" />

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/quicksandmedium"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/textResContra"
        android:textColor="@color/azulTexto"
        android:textSize="22sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="80dp"
        android:text="@string/correo"
        android:textColor="@color/azulTexto"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/et_correoResContra"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" />

    <Button
        android:id="@+id/btnEnviarCodigo"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/fondo_boton_gradiente"
        android:text="@string/botonEnviarCodigo"
        android:textAllCaps="false"
        android:textColor="@color/white"
        />


</LinearLayout>